[CCAP-1301] Setting start date on the main pdf to the correct provider's earliest date